--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -2,7 +2,7 @@ theme : black
 logo : assets/img/logo.png
 logo-position : top-left
 
-layout : center
+# layout : center
 
 footnote : "Denver PowerShell Meetup"
 
